<resources>
    <string name="app_name">ViewBindingExample</string>
    <string name="escribe_algo">Escribe algo:</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="check_title">Este es un check!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escribe_el_nombre">Escribe el nombre</string>
    <string name="escribe_el_precio">Escribe el precio</string>
</resources>