<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="mx.ipn.cic.viewbindingexample.model.ProductDTO" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.FirstFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribe_el_nombre"
            android:text="@={product.name}" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribe_el_precio"
            android:inputType="numberDecimal"
            android:text='@={""+product.price}' />

        <CheckBox
            android:id="@+id/cbActivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={product.active}"
            android:text="@string/check_title" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n" />

    </LinearLayout>

</layout>