<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_algo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n" />

    <CheckBox
        android:id="@+id/cbActivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListaDeAlgo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>